--- a/src/App.css
+++ b/src/App.css
@@ -4,4 +4,37 @@
   width: 100%;
   height: 100%;
   position: absolute;
+  font-family: 'Segment Circular Std','Helvetica Neue',Helvetica,Arial,sans-serif;
+  display: flex;
+  flex-direction: column;
+}
+
+select {
+  -webkit-appearance: button;
+  -webkit-border-radius: 2px;
+  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
+  -webkit-padding-end: 20px;
+  -webkit-padding-start: 2px;
+  -webkit-user-select: none;
+  background-image: url(http://i62.tinypic.com/15xvbd5.png), -webkit-linear-gradient(#FAFAFA, #F4F4F4 40%, #E5E5E5);
+  background-position: 99% center;
+  background-repeat: no-repeat;
+  border: 1px solid #AAA;
+  color: #555;
+  font-size: inherit;
+  margin: 20px;
+  overflow: hidden;
+  padding: 5px 10px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.App-simulate-button {
+  width: 80%;
+  height: 40px;
+  background-color: #49b882;
+  color: #ffffff;
+  font-size: 24px;
+  align-self: center;
+  border: 0;
 }
